# urfu-schedule-bot

./: README.md  pyproject.toml  start_command
src/: api_client.py  bot.py  botgigachat.py  botvk.py  config.py  console_handler.py  handlers.py  test_module.py  types.py
tests/: test_config.py
